# piQture

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Contributing.md  Dockerfile  MANIFEST.in  README.md  citation.cff  genindex.html  getting_started.html  index.html  load_mnist_data.py  make_init.py  modules.html  objects.inv  piqture.data_loader.html  piqture.embeddings.html  piqture.embeddings.image_embeddings.html  piqture.embeddings.image_embedidngs.html  piqture.gates.html  piqture.html  piqture.mixin.html  piqture.neural_networks.html  piqture.neural_networks.layers.html  piqture.tensor_networks.html  piqture.transforms.html  piqture.variational_classifiers.html  py-modindex.html  pyproject.toml  requirements-copy-.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  getting_started.doctree  index.doctree  modules.doctree  piqture.data_loader.doctree  piqture.doctree  piqture.embeddings.doctree  piqture.embeddings.image_embeddings.doctree  piqture.embeddings.image_embedidngs.doctree  piqture.gates.doctree  piqture.mixin.doctree  piqture.neural_networks.doctree  piqture.neural_networks.layers.doctree  piqture.tensor_networks.doctree  piqture.transforms.doctree  piqture.variational_classifiers.doctree
_sources/: getting_started.rst.txt  index.rst.txt  modules.rst.txt  piqture.embeddings.image_embeddings.rst.txt  piqture.embeddings.image_embedidngs.rst.txt  piqture.embeddings.rst.txt  piqture.gates.rst.txt  piqture.neural_networks.layers.rst.txt  piqture.transforms.rst.txt
demos/: brqi.md  brqi_demo.py
(+208 files in other folders)
